--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.22",
+    "@types/jquery.validation": "^1.16.8",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
