--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "jquery": "^3.7.1",
+    "jquery-validation": "^1.20.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
