--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "bootstrap-icons": "^1.11.1",
     "jquery": "^3.7.1",
     "jquery-validation": "^1.20.0",
+    "vee-validate": "^4.11.8",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.22",
